<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".VhodActivity">


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo_start_screen"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/number_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_logo"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="29dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_design"
        android:hint="@string/number_phone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number_user"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/input_design"
        android:hint="@string/password_user"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linear_check"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_user"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <com.rey.material.widget.CheckBox
            android:id="@+id/checkbox"
            style="@style/Material.Drawable.CheckBox"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/checkbox"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:text="@string/admin_panel_link"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_btn"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/not_admin_panel_link"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible">

    </TextView>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="331dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_check"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/button_start_screen"
        android:padding="20dp"
        android:text="@string/login_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

</RelativeLayout>