<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo_start_screen"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="99dp"
        android:background="@drawable/button_start_screen"
        android:padding="20dp"
        android:text="@string/main_login_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/main_join_btn"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_login_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="186dp"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:text="@string/main_join_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

</RelativeLayout>